--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-chartjs-2": "^3.3.0",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "sass": "^1.41.0"
   },
