--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^3.3.0",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
+    "react-table": "^7.7.0",
     "sass": "^1.41.0"
   },
   "devDependencies": {
