--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "chart.js": "^3.6.0",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.23",
     "material-table": "1.69.0",
     "material-ui": "^0.20.2",
     "next": "11.1.2",
@@ -20,7 +22,9 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "react-table": "^7.7.0",
-    "sass": "^1.41.0"
+    "react-to-pdf": "^0.0.14",
+    "sass": "^1.41.0",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
