--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-table": "^7.7.0",
     "react-to-pdf": "^0.0.14",
     "sass": "^1.41.0",
+    "valtio": "^1.2.7",
     "web3": "^1.6.1"
   },
   "devDependencies": {
