--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "chart.js": "^3.6.0",
     "jspdf": "^2.4.0",
     "jspdf-autotable": "^3.5.23",
-    "material-table": "1.69.0",
+    "material-table": "^1.69.3",
     "material-ui": "^0.20.2",
     "next": "11.1.2",
     "react": "17.0.2",
